kubernetes/demo/ingress/ingress-demo-dino-game-vue.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-dino-game-vue-route
  namespace: featbit
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: featbit-dino.local
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: demo-dino-game-vue
                port: 
                  number: 5173
